Added console text output widget to UI.

--- a/hacms/mainwindow.ui
+++ b/hacms/mainwindow.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>481</width>
-    <height>380</height>
+    <width>600</width>
+    <height>567</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -148,13 +148,32 @@
      <string>Actual Speed</string>
     </property>
    </widget>
+   <widget class="QPlainTextEdit" name="console">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>310</y>
+      <width>531</width>
+      <height>191</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Courier New</family>
+      <pointsize>13</pointsize>
+     </font>
+    </property>
+    <property name="plainText">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>481</width>
+     <width>600</width>
      <height>22</height>
     </rect>
    </property>
