--- a/hacms/mainwindow.ui
+++ b/hacms/mainwindow.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>567</height>
+    <width>771</width>
+    <height>572</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,10 +21,10 @@
    <widget class="QPushButton" name="rosButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>20</y>
       <width>201</width>
-      <height>41</height>
+      <height>91</height>
      </rect>
     </property>
     <property name="text">
@@ -37,10 +37,10 @@
    <widget class="QPushButton" name="rcButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>201</width>
-      <height>41</height>
+      <x>240</x>
+      <y>20</y>
+      <width>181</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
@@ -54,9 +54,9 @@
     <property name="geometry">
      <rect>
       <x>240</x>
-      <y>20</y>
-      <width>171</width>
-      <height>81</height>
+      <y>90</y>
+      <width>181</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="text">
@@ -80,7 +80,7 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>130</y>
+      <y>170</y>
       <width>161</width>
       <height>51</height>
      </rect>
@@ -162,7 +162,7 @@
      <rect>
       <x>40</x>
       <y>310</y>
-      <width>531</width>
+      <width>711</width>
       <height>191</height>
      </rect>
     </property>
@@ -176,13 +176,23 @@
      <string/>
     </property>
    </widget>
+   <widget class="QGraphicsView" name="graphicsView">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>20</y>
+      <width>311</width>
+      <height>271</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
+     <width>771</width>
      <height>22</height>
     </rect>
    </property>
