--- a/hacms/mainwindow.ui
+++ b/hacms/mainwindow.ui
@@ -29,7 +29,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>20</pointsize>
+      <pointsize>18</pointsize>
      </font>
     </property>
     <property name="text">
@@ -50,7 +50,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>20</pointsize>
+      <pointsize>18</pointsize>
      </font>
     </property>
     <property name="text">
@@ -74,7 +74,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>20</pointsize>
+      <pointsize>18</pointsize>
      </font>
     </property>
     <property name="text">
@@ -105,7 +105,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>36</pointsize>
+      <pointsize>30</pointsize>
      </font>
     </property>
     <property name="styleSheet">
@@ -129,7 +129,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>36</pointsize>
+      <pointsize>30</pointsize>
      </font>
     </property>
     <property name="styleSheet">
@@ -145,19 +145,22 @@
    <widget class="QLabel" name="desiredSpeedLabel">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>310</x>
       <y>20</y>
-      <width>131</width>
+      <width>101</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>18</pointsize>
+      <pointsize>14</pointsize>
      </font>
     </property>
     <property name="text">
      <string>Desired Speed</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLineEdit" name="desiredSpeedEdit">
@@ -171,7 +174,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>23</pointsize>
+      <pointsize>20</pointsize>
      </font>
     </property>
     <property name="text">
@@ -192,7 +195,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>18</pointsize>
+      <pointsize>14</pointsize>
      </font>
     </property>
     <property name="text">
@@ -255,7 +258,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>18</pointsize>
+      <pointsize>14</pointsize>
      </font>
     </property>
     <property name="text">
@@ -289,7 +292,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>20</pointsize>
+      <pointsize>18</pointsize>
      </font>
     </property>
     <property name="text">
@@ -313,7 +316,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>16</pointsize>
+      <pointsize>14</pointsize>
      </font>
     </property>
     <property name="text">
