--- a/hacms/mainwindow.ui
+++ b/hacms/mainwindow.ui
@@ -40,6 +40,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="rcButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -85,6 +88,9 @@
     </property>
    </widget>
    <widget class="QLCDNumber" name="actualSpeedLCD">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -95,6 +101,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="estimatedLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -119,6 +128,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="actualLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -143,6 +155,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="desiredSpeedLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -164,6 +179,9 @@
     </property>
    </widget>
    <widget class="QLineEdit" name="desiredSpeedEdit">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>310</x>
@@ -185,6 +203,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="actualSpeedLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -225,6 +246,9 @@
     </property>
    </widget>
    <widget class="QWidget" name="outputPlot" native="true">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>470</x>
@@ -235,6 +259,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="outputPlotLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>470</x>
@@ -248,6 +275,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="estimatedSpeedLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -269,6 +299,9 @@
     </property>
    </widget>
    <widget class="QLCDNumber" name="estimatedSpeedLCD">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>280</x>
@@ -324,6 +357,9 @@
     </property>
    </widget>
    <widget class="QLabel" name="inputPlotLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>470</x>
@@ -337,6 +373,9 @@
     </property>
    </widget>
    <widget class="QWidget" name="inputPlot" native="true">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>470</x>
