Added right plot for odometry.

--- a/hacms/mainwindow.ui
+++ b/hacms/mainwindow.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>825</width>
-    <height>727</height>
+    <width>1251</width>
+    <height>718</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -231,7 +231,7 @@
      <rect>
       <x>20</x>
       <y>490</y>
-      <width>781</width>
+      <width>1211</width>
       <height>161</height>
      </rect>
     </property>
@@ -256,6 +256,9 @@
       <width>331</width>
       <height>201</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: white;</string>
     </property>
    </widget>
    <widget class="QLabel" name="outputPlotLabel">
@@ -384,6 +387,41 @@
       <height>201</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: white;</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="rightPlot" native="true">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>30</y>
+      <width>421</width>
+      <height>441</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: white;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="rightPlotLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>10</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Odometry</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -391,7 +429,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>825</width>
+     <width>1251</width>
      <height>22</height>
     </rect>
    </property>
