--- a/hacms/mainwindow.ui
+++ b/hacms/mainwindow.ui
@@ -162,7 +162,7 @@
      <rect>
       <x>280</x>
       <y>20</y>
-      <width>161</width>
+      <width>171</width>
       <height>20</height>
      </rect>
     </property>
@@ -186,7 +186,7 @@
      <rect>
       <x>310</x>
       <y>50</y>
-      <width>101</width>
+      <width>111</width>
       <height>41</height>
      </rect>
     </property>
@@ -346,7 +346,7 @@
      <rect>
       <x>310</x>
       <y>100</y>
-      <width>101</width>
+      <width>111</width>
       <height>32</height>
      </rect>
     </property>
@@ -523,6 +523,32 @@
     <property name="icon">
      <iconset>
       <normaloff>../images/folder_image.png</normaloff>../images/folder_image.png</iconset>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>10</y>
+      <width>20</width>
+      <height>471</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>10</y>
+      <width>20</width>
+      <height>471</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
     </property>
    </widget>
   </widget>
