--- a/hacms/mainwindow.ui
+++ b/hacms/mainwindow.ui
@@ -94,7 +94,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>300</y>
+      <y>190</y>
       <width>171</width>
       <height>71</height>
      </rect>
@@ -162,17 +162,17 @@
      <rect>
       <x>280</x>
       <y>20</y>
-      <width>171</width>
+      <width>51</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
-     <string>Desired Speed</string>
+     <string>Speed</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -184,15 +184,15 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>50</y>
-      <width>61</width>
-      <height>31</height>
+      <x>340</x>
+      <y>20</y>
+      <width>51</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -209,7 +209,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>280</y>
+      <y>170</y>
       <width>171</width>
       <height>20</height>
      </rect>
@@ -284,7 +284,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>390</y>
+      <y>280</y>
       <width>171</width>
       <height>20</height>
      </rect>
@@ -308,7 +308,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>410</y>
+      <y>300</y>
       <width>171</width>
       <height>71</height>
      </rect>
@@ -344,15 +344,15 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>50</y>
+      <x>400</x>
+      <y>20</y>
       <width>51</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -557,15 +557,15 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>130</y>
+      <x>400</x>
+      <y>50</y>
       <width>51</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -579,14 +579,14 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>100</y>
-      <width>171</width>
+      <y>50</y>
+      <width>51</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -602,15 +602,15 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>130</y>
-      <width>61</width>
-      <height>31</height>
+      <x>340</x>
+      <y>50</y>
+      <width>51</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -626,15 +626,15 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>210</y>
+      <x>400</x>
+      <y>80</y>
       <width>51</width>
-      <height>31</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -648,14 +648,14 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>180</y>
-      <width>171</width>
+      <y>80</y>
+      <width>51</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
@@ -671,19 +671,103 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>210</y>
-      <width>61</width>
-      <height>31</height>
+      <x>340</x>
+      <y>80</y>
+      <width>51</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>14</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="text">
      <string>0.2</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="setTrimLeftButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>120</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../images/arrow_left_12x12.png</normaloff>../images/arrow_left_12x12.png</iconset>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="setTrimRightButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>390</x>
+      <y>120</y>
+      <width>51</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../images/arrow_right_12x12.png</normaloff>../images/arrow_right_12x12.png</iconset>
+    </property>
+   </widget>
+   <widget class="QLabel" name="trimLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>110</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Trim</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="trimValueLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>130</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>0.01</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
