--- a/hacms/mainwindow.ui
+++ b/hacms/mainwindow.ui
@@ -94,7 +94,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>190</y>
+      <y>230</y>
       <width>171</width>
       <height>71</height>
      </rect>
@@ -209,7 +209,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>170</y>
+      <y>210</y>
       <width>171</width>
       <height>20</height>
      </rect>
@@ -284,7 +284,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>280</y>
+      <y>320</y>
       <width>171</width>
       <height>20</height>
      </rect>
@@ -308,7 +308,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>300</y>
+      <y>340</y>
       <width>171</width>
       <height>71</height>
      </rect>
@@ -352,7 +352,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>12</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
@@ -565,7 +565,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>12</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
@@ -634,7 +634,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>12</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
@@ -696,9 +696,9 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>120</y>
-      <width>51</width>
-      <height>32</height>
+      <y>160</y>
+      <width>41</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="icon">
@@ -712,10 +712,10 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>120</y>
-      <width>51</width>
-      <height>32</height>
+      <x>400</x>
+      <y>160</y>
+      <width>41</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="icon">
@@ -730,14 +730,14 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>110</y>
+      <y>140</y>
       <width>51</width>
       <height>20</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>12</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
@@ -754,7 +754,7 @@
     <property name="geometry">
      <rect>
       <x>340</x>
-      <y>130</y>
+      <y>160</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -767,7 +767,76 @@
      </font>
     </property>
     <property name="text">
-     <string>0.01</string>
+     <string>0.0</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="setAutotrimButton">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>110</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Set</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="autotrimLabel">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>110</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Autotrim</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="autotrimEdit">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>110</y>
+      <width>51</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>0.001</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
