--- a/hacms/ui/images.qrc
+++ b/hacms/ui/images.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource>
+    <file>images/map_pin_stroke_15x24.png</file>
     <file>images/arrow_left_12x12.png</file>
     <file>images/arrow_right_12x12.png</file>
     <file>images/folder_image.png</file>
