--- a/hacms/ui/demo.ui
+++ b/hacms/ui/demo.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1297</width>
-    <height>705</height>
+    <width>1300</width>
+    <height>715</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -107,7 +107,7 @@ Controller</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>530</y>
+      <y>540</y>
       <width>1261</width>
       <height>121</height>
      </rect>
@@ -250,7 +250,7 @@ Controller</string>
       <x>280</x>
       <y>10</y>
       <width>1001</width>
-      <height>511</height>
+      <height>521</height>
      </rect>
     </property>
     <property name="tabPosition">
@@ -272,9 +272,9 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>290</y>
-        <width>171</width>
+        <x>10</x>
+        <y>300</y>
+        <width>181</width>
         <height>71</height>
        </rect>
       </property>
@@ -286,7 +286,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>80</x>
-        <y>190</y>
+        <y>200</y>
         <width>51</width>
         <height>20</height>
        </rect>
@@ -310,7 +310,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>210</x>
-        <y>240</y>
+        <y>250</y>
         <width>51</width>
         <height>16</height>
        </rect>
@@ -326,7 +326,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>210</x>
-        <y>270</y>
+        <y>280</y>
         <width>331</width>
         <height>201</height>
        </rect>
@@ -339,7 +339,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>310</x>
-        <y>0</y>
+        <y>10</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -361,7 +361,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>190</y>
+        <y>200</y>
         <width>61</width>
         <height>51</height>
        </rect>
@@ -375,7 +375,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>490</x>
-        <y>240</y>
+        <y>250</y>
         <width>51</width>
         <height>21</height>
        </rect>
@@ -396,7 +396,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>140</y>
+        <y>150</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -419,9 +419,9 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>270</y>
-        <width>171</width>
+        <x>10</x>
+        <y>280</y>
+        <width>181</width>
         <height>20</height>
        </rect>
       </property>
@@ -443,9 +443,9 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>400</y>
-        <width>171</width>
+        <x>10</x>
+        <y>410</y>
+        <width>181</width>
         <height>71</height>
        </rect>
       </property>
@@ -457,7 +457,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>140</x>
-        <y>140</y>
+        <y>150</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -478,7 +478,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>630</x>
-        <y>0</y>
+        <y>10</y>
         <width>31</width>
         <height>21</height>
        </rect>
@@ -492,7 +492,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>340</x>
-        <y>0</y>
+        <y>10</y>
         <width>51</width>
         <height>21</height>
        </rect>
@@ -510,7 +510,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>350</x>
-        <y>240</y>
+        <y>250</y>
         <width>31</width>
         <height>21</height>
        </rect>
@@ -528,7 +528,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>830</x>
-        <y>0</y>
+        <y>10</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -546,7 +546,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>800</x>
-        <y>0</y>
+        <y>10</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -568,7 +568,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>550</x>
-        <y>0</y>
+        <y>10</y>
         <width>71</width>
         <height>16</height>
        </rect>
@@ -584,7 +584,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>40</y>
+        <y>50</y>
         <width>91</width>
         <height>39</height>
        </rect>
@@ -608,14 +608,14 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>9</y>
+        <y>19</y>
         <width>171</width>
         <height>21</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>20</pointsize>
+        <pointsize>18</pointsize>
        </font>
       </property>
       <property name="text">
@@ -632,7 +632,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>270</x>
-        <y>240</y>
+        <y>250</y>
         <width>31</width>
         <height>21</height>
        </rect>
@@ -649,7 +649,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>260</x>
-        <y>0</y>
+        <y>10</y>
         <width>31</width>
         <height>21</height>
        </rect>
@@ -666,7 +666,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>40</y>
+        <y>50</y>
         <width>71</width>
         <height>41</height>
        </rect>
@@ -684,7 +684,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>190</x>
-        <y>0</y>
+        <y>10</y>
         <width>20</width>
         <height>471</height>
        </rect>
@@ -700,14 +700,14 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>70</x>
-        <y>110</y>
+        <y>120</y>
         <width>61</width>
         <height>21</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>13</pointsize>
+        <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
@@ -721,7 +721,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>710</x>
-        <y>0</y>
+        <y>10</y>
         <width>71</width>
         <height>21</height>
        </rect>
@@ -742,7 +742,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>80</x>
-        <y>210</y>
+        <y>220</y>
         <width>51</width>
         <height>20</height>
        </rect>
@@ -768,14 +768,14 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>70</x>
-        <y>140</y>
+        <y>150</y>
         <width>61</width>
         <height>21</height>
        </rect>
       </property>
       <property name="font">
        <font>
-        <pointsize>13</pointsize>
+        <pointsize>12</pointsize>
        </font>
       </property>
       <property name="text">
@@ -791,9 +791,9 @@ Controller</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>380</y>
-        <width>171</width>
+        <x>10</x>
+        <y>390</y>
+        <width>181</width>
         <height>20</height>
        </rect>
       </property>
@@ -816,7 +816,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>550</x>
-        <y>30</y>
+        <y>40</y>
         <width>421</width>
         <height>441</height>
        </rect>
@@ -832,7 +832,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>210</x>
-        <y>0</y>
+        <y>10</y>
         <width>41</width>
         <height>16</height>
        </rect>
@@ -845,7 +845,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>680</x>
-        <y>0</y>
+        <y>10</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -864,7 +864,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>440</x>
-        <y>0</y>
+        <y>10</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -885,7 +885,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>210</x>
-        <y>30</y>
+        <y>40</y>
         <width>331</width>
         <height>201</height>
        </rect>
@@ -901,7 +901,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>140</x>
-        <y>110</y>
+        <y>120</y>
         <width>41</width>
         <height>21</height>
        </rect>
@@ -919,7 +919,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>420</x>
-        <y>240</y>
+        <y>250</y>
         <width>31</width>
         <height>21</height>
        </rect>
@@ -937,7 +937,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>410</x>
-        <y>0</y>
+        <y>10</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -959,7 +959,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>130</x>
-        <y>190</y>
+        <y>200</y>
         <width>61</width>
         <height>51</height>
        </rect>
@@ -976,7 +976,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>110</y>
+        <y>120</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -997,7 +997,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>390</x>
-        <y>240</y>
+        <y>250</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -1016,7 +1016,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>320</x>
-        <y>240</y>
+        <y>250</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -1035,7 +1035,7 @@ Controller</string>
       <property name="geometry">
        <rect>
         <x>460</x>
-        <y>240</y>
+        <y>250</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -1064,7 +1064,7 @@ Controller</string>
         <x>225</x>
         <y>11</y>
         <width>761</width>
-        <height>461</height>
+        <height>471</height>
        </rect>
       </property>
      </widget>
@@ -1077,7 +1077,7 @@ Controller</string>
         <x>10</x>
         <y>31</y>
         <width>201</width>
-        <height>441</height>
+        <height>451</height>
        </rect>
       </property>
      </widget>
@@ -1105,7 +1105,7 @@ Controller</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1297</width>
+     <width>1300</width>
      <height>22</height>
     </rect>
    </property>
@@ -1143,9 +1143,27 @@ Controller</string>
  <tabstops>
   <tabstop>landsharkButton</tabstop>
   <tabstop>ccButton</tabstop>
+  <tabstop>saveButton</tabstop>
   <tabstop>rcButton</tabstop>
+  <tabstop>attack1RadioButton</tabstop>
+  <tabstop>attack2RadioButton</tabstop>
+  <tabstop>attack3RadioButton</tabstop>
   <tabstop>attackButton</tabstop>
+  <tabstop>desiredSpeedEdit</tabstop>
+  <tabstop>setSpeedButton</tabstop>
+  <tabstop>kpEdit</tabstop>
+  <tabstop>setKPButton</tabstop>
+  <tabstop>kiEdit</tabstop>
+  <tabstop>setKIButton</tabstop>
+  <tabstop>setTrimLeftButton</tabstop>
+  <tabstop>setTrimRightButton</tabstop>
+  <tabstop>saveInputPlotButton</tabstop>
+  <tabstop>saveOutputPlotButton</tabstop>
+  <tabstop>saveRightPlotButton</tabstop>
   <tabstop>console</tabstop>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>mapView</tabstop>
+  <tabstop>waypointListView</tabstop>
  </tabstops>
  <resources>
   <include location="images.qrc"/>
